phpstan only accepts directories for some reason...

--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -78,4 +78,4 @@ jobs:
 
       - name: Static Analysis
         if: ${{ steps.filter.outputs.wpcontent == 'true' }}
-        run: ./vendor/bin/phpstan --memory-limit=-1 --error-format=github ${{ steps.filter.outputs.wpcontent_files }}
+        run: ./vendor/bin/phpstan --memory-limit=-1 --error-format=github
