--- a/package.json
+++ b/package.json
@@ -41,15 +41,11 @@
   },
   "browserslist": [
     "last 2 versions",
-    "safari >= 13",
-    "ios >= 13",
-    "android >= 5.1",
-    "not ie <= 11",
-    "not ie_mob <= 11",
+    "safari >= 15",
+    "ios >= 15",
+    "android >= 8.0",
     "not op_mini all",
-    "not bb <= 10",
-    "not samsung 4",
-    "not op_mob <= 12.1"
+    "not dead"
   ],
   "engines": {
     "node": "16.13.1",
