--- a/package.json
+++ b/package.json
@@ -44,8 +44,12 @@
     "safari >= 15",
     "ios >= 15",
     "android >= 8.0",
+    "not ie <= 11",
+    "not ie_mob <= 11",
     "not op_mini all",
-    "not dead"
+    "not bb <= 10",
+    "not samsung 4",
+    "not op_mob <= 12.1"
   ],
   "engines": {
     "node": "16.13.1",
