--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
       "type": "package",
       "package": {
         "name": "gravityforms/gravityforms",
-        "version": "2.6.7",
+        "version": "2.7.13",
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
@@ -63,7 +63,7 @@
       "type": "package",
       "package": {
         "name": "advanced-custom-fields/advanced-custom-fields-pro",
-        "version": "6.0.2",
+        "version": "6.2.0",
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
@@ -76,7 +76,7 @@
     }
   ],
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": ">=7.4",
     "ext-exif": "*",
     "ext-gd": "*",
     "ext-imagick": "*",
@@ -85,9 +85,10 @@
     "advanced-custom-fields/advanced-custom-fields-pro": "*",
     "gravityforms/gravityforms": "*",
     "guzzlehttp/psr7": "^1.4",
+    "http-interop/http-factory-guzzle": "^1.2",
     "humanmade/s3-uploads": "3.0.4",
     "johnbillion/extended-cpts": "^5.0",
-    "johnpbloch/wordpress-core": "6.0.3",
+    "johnpbloch/wordpress-core": "6.3.1",
     "johnpbloch/wordpress-core-installer": "2.0.*",
     "moderntribe/acf-image-select": "dev-master",
     "moderntribe/acf-menu-chooser": "^1.1",
@@ -100,14 +101,14 @@
     "sabre/cache": "^1.0",
     "sunra/php-simple-html-dom-parser": "1.5.2",
     "vlucas/phpdotenv": "^5.3",
-    "wpackagist-plugin/disable-emojis": "1.7.4",
+    "wpackagist-plugin/disable-emojis": "1.7.5",
     "wpackagist-plugin/gravity-forms-wcag-20-form-fields": "1.7.2",
-    "wpackagist-plugin/limit-login-attempts-reloaded": "2.25.8",
-    "wpackagist-plugin/posts-to-posts": "1.7",
-    "wpackagist-plugin/redirection": "5.3.4",
-    "wpackagist-plugin/regenerate-thumbnails": "3.1.5",
+    "wpackagist-plugin/limit-login-attempts-reloaded": "2.25.23",
+    "wpackagist-plugin/posts-to-posts": "1.7.1",
+    "wpackagist-plugin/redirection": "5.3.10",
+    "wpackagist-plugin/regenerate-thumbnails": "3.1.6",
     "wpackagist-plugin/user-switching": "1.7.0",
-    "wpackagist-plugin/wordpress-seo": "19.8",
+    "wpackagist-plugin/wordpress-seo": "21.0",
     "wpackagist-plugin/wp-tota11y": "1.2.0"
   },
   "require-dev": {
