Update ACF Pro Composer install configuration to modern standards.

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-# Find API keys in 1Password, in the Square One vault under "Square One .env"
-# Direct 1password link: https://m.tri.be/soenv10
-WP_PLUGIN_ACF_KEY=''
+# Not currently used.
+# ACF Pro uses auth.json instead.
+# Gravity Forms does not support composer installations. The plugin fiels should be checked into the repo.
