--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true,
       "composer/installers": true,
-      "ffraenz/private-composer-installer": true,
       "johnpbloch/wordpress-core-installer": true,
       "cweagans/composer-patches": true,
       "phpstan/extension-installer": true,
@@ -28,6 +27,10 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "repositories": [
+    {
+      "type": "composer",
+      "url": "https://connect.advancedcustomfields.com"
+    },
     {
       "type": "composer",
       "url": "https://wpackagist.org"
@@ -52,7 +55,6 @@
     "ext-imagick": "*",
     "ext-intl": "*",
     "ext-json": "*",
-    "advanced-custom-fields/advanced-custom-fields-pro": "*",
     "guzzlehttp/psr7": "^1.4",
     "http-interop/http-factory-guzzle": "^1.2",
     "humanmade/s3-uploads": "3.0.4",
@@ -78,7 +80,8 @@
     "wpackagist-plugin/regenerate-thumbnails": "3.1.6",
     "wpackagist-plugin/user-switching": "1.7.0",
     "wpackagist-plugin/wordpress-seo": "21.0",
-    "wpackagist-plugin/wp-tota11y": "1.2.0"
+    "wpackagist-plugin/wp-tota11y": "1.2.0",
+    "wpengine/advanced-custom-fields-pro": "6.3.4"
   },
   "require-dev": {
     "brain/monkey": "2.*",
