--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 # Not currently used.
 # ACF Pro uses auth.json instead.
-# Gravity Forms does not support composer installations. The plugin fiels should be checked into the repo.
+# Gravity Forms does not support composer installations. The plugin files should be checked into the repo directly.
