--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,3 @@
-# Find API keys in 1Password, in the Square One vault under "Square One .env"
-# Direct 1password link: https://m.tri.be/soenv10
-WP_PLUGIN_ACF_KEY=''
-WP_PLUGIN_GF_KEY=''
-WP_PLUGIN_GF_TOKEN=''
+# Not currently used.
+# ACF Pro uses auth.json instead.
+# Gravity Forms does not support composer installations. The plugin files should be checked into the repo directly.
